--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ rust-version = "1.65"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-iced = { version = "0.9", features = ["tokio", "svg", "canvas", "wgpu"] }
+iced = { version = "0.9", features = ["tokio", "svg", "canvas", "wgpu", "glow"] }
 iced_native = "0.10"
 iced_aw = { version = "0.5.0", default-features = false, features = ["grid"] }
 tokio = { version = "1.24.1", features = ["full"] }
